Se subiió las tareas 1 y 2, a su vez que se actualizó el index para mostrarlas en la pages

--- a/index.html
+++ b/index.html
@@ -10,5 +10,24 @@
     <h1>
         A continuación se muestran mis tareas
     </h1>
+
+<h2>
+Tareas Html
+</h2>
+
+<!-- Tarea 1-->
+<h3>
+    Tarea1 - Estructura básica de un documento html:
+</h3>
+<a href="1Tareas-html/tarea1index.html" download="" role="button">Descargar código</a>
+<a href="1Tareas-html/tarea1index.html">Ver código</a>
+
+<!-- Tarea 2-->
+<h3>
+    Tarea2 - Etiquetas meta de redes sociales:
+</h3>
+<a href="1Tareas-html/tarea2index.html" download="" role="button">Descargar código</a>
+<a href="1Tareas-html/tarea2index.html">Ver código</a>
+
 </body>
 </html>
