Se subió la Tarea 3, así como se actualizo el index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=”author” content=Antonio Arzola” />
+    <meta name=”description” content=”Se muestra la página principal de mi cuenta de github” />
+
     <title>Mis Tareas</title>
 </head>
 <body>
@@ -28,6 +31,13 @@ Tareas Html
 </h3>
 <a href="1Tareas-html/tarea2index.html" download="" role="button">Descargar código</a>
 <a href="1Tareas-html/tarea2index.html">Ver código</a>
+
+<!-- Tarea 3-->
+<h3>
+    Tarea3 - Segunda investigación:
+</h3>
+<a href="1Tareas-html/investigacion2.html" download="" role="button">Descargar código</a>
+<a href="1Tareas-html/investigacion2.html">Ver código</a>
 
 </body>
 </html>
