Se subió la Tarea 4, a su vez que se actualizó el index.

--- a/index.html
+++ b/index.html
@@ -39,5 +39,12 @@ Tareas Html
 <a href="1Tareas-html/investigacion2.html" download="" role="button">Descargar código</a>
 <a href="1Tareas-html/investigacion2.html">Ver código</a>
 
+<!-- Tarea 4-->
+<h3>
+    Tarea4 - Practicando lo aprendido:
+</h3>
+<a href="1Tareas-html/tarea2/tarea2.html" download="" role="button">Descargar código</a>
+<a href="1Tareas-html/tarea2/tarea2.html">Ver código</a>
+
 </body>
 </html>
