Se creo las hojas de estilos llamadas PrimeraHoja.css y EstilosGeneral.css a su vez, se agrego la primer hoja de estilos a las tareas 1 y 4 del primer módulo de HTML5 y se agrego la segunda hoja de estilos a las tareas 2 y 3 del primer módulo de HTML5. Tambien se agregó botones de descarga de las hojas de estilos. en el index.

--- a/1Tareas-html/investigacion2.html
+++ b/1Tareas-html/investigacion2.html
@@ -7,7 +7,9 @@
     <meta name=”author” content=Antonio Arzola” />
         <meta name=”description” content=”Se muestra la página de mi investigación sobre los SEO” />
 
-    <title>SEO (Search Engine Optimization)</title>
+    <!--Invocando mi hoja de estilos-->    
+    <link rel="stylesheet" href="css/EstilosGeneral.css"/>
+        <title>SEO (Search Engine Optimization)</title>
 </head>
 <body>
     <header>
