--- a/1Tareas-html/tarea2.html
+++ b/1Tareas-html/tarea2.html
@@ -7,7 +7,10 @@
     <meta name=”author” content=Antonio Arzola” />
         <meta name=”description” content=”Se muestra mi Tarea 2 del módulo 1 html” />
 
-    <title>Tarea 2</title>
+    <!--Invocando mi hoja de estilos-->        
+    <link rel="stylesheet" href="css/PrimeraHoja.css" />
+        
+        <title>Tarea 2</title>
 </head>
 <body>
     <h1>
@@ -145,7 +148,7 @@ Ahora les presento que, desde mi punto de vista son las obras literarias que me 
 </td>
 <td>
     <figure>
-    <img src="FransSchubert.jpg" class="d-block w-100" alt="Se observa un retrato de Franz Schubert, el cual está sentado de lado en una silla, en frente de una mesa, el cual está recargado sobre su lado derecho y sosteniendo una pluma, sobre la mesa hay una partitura" />
+    <img src="img/FransSchubert.jpg" class="d-block w-100" alt="Se observa un retrato de Franz Schubert, el cual está sentado de lado en una silla, en frente de una mesa, el cual está recargado sobre su lado derecho y sosteniendo una pluma, sobre la mesa hay una partitura" />
 </figure>
 </td>
 <td>
@@ -166,7 +169,7 @@ Passion
 </td>
 <td>
     <figure>
-    <img src="FredericChopin.jpg" class="d-block w-100" alt="Se muestra el retrato de Frederic Chopin, el cual esta vestido de gala, tiene cabello color castaño al cuelloy barba partida, sus ojos son de color azul." />
+    <img src="img/FredericChopin.jpg" class="d-block w-100" alt="Se muestra el retrato de Frederic Chopin, el cual esta vestido de gala, tiene cabello color castaño al cuelloy barba partida, sus ojos son de color azul." />
 </figure>
 </td>
 <td>
@@ -187,7 +190,7 @@ Passion
 </td>
 <td>
     <figure>
-        <img src="Framzliszt.jpg" class="d-block w-100" alt="Se observa un retrato de Franz Liszt, el cual está vestido de gala, con un moño a cuadros, cabello largo castaño claro peinado hacia atrás y es de tez clara." />
+        <img src="img/Framzliszt.jpg" class="d-block w-100" alt="Se observa un retrato de Franz Liszt, el cual está vestido de gala, con un moño a cuadros, cabello largo castaño claro peinado hacia atrás y es de tez clara." />
     </figure>
 </td>
 <td>
@@ -208,7 +211,7 @@ Passion
 </td>
 <td>
     <figure>
-        <img src="Framzliszt.jpg" class="d-block w-100" alt="Se observa un retrato de Franz Liszt, el cual está vestido de gala, con un moño a cuadros, cabello largo castaño claro peinado hacia atrás y es de tez clara."/>
+        <img src="img/Framzliszt.jpg" class="d-block w-100" alt="Se observa un retrato de Franz Liszt, el cual está vestido de gala, con un moño a cuadros, cabello largo castaño claro peinado hacia atrás y es de tez clara."/>
     </figure>
 </td>
 <td>
@@ -229,7 +232,7 @@ Passion
 </td>
 <TD>
     <figure>
-        <img src="StephaneWrembrel.jpg" class="d-block w-100" alt="Se observa una foto de Stephane Wrembel, sentado de frente sobre un banco, el cual sujeta su guitarra del mástil, la cual es de cafe oscuro, esta vestido de jeans y una camisa de botones azul oscuro, es de cabello canoso y lleva el cabello recogido por una coleta y tiene barba cerrada."/>
+        <img src="img/StephaneWrembrel.jpg" class="d-block w-100" alt="Se observa una foto de Stephane Wrembel, sentado de frente sobre un banco, el cual sujeta su guitarra del mástil, la cual es de cafe oscuro, esta vestido de jeans y una camisa de botones azul oscuro, es de cabello canoso y lleva el cabello recogido por una coleta y tiene barba cerrada."/>
     </figure>
 </TD>
 <td>
