--- a/1Tareas-html/tarea2index.html
+++ b/1Tareas-html/tarea2index.html
@@ -25,7 +25,9 @@
     <meta name=”twitter:site” content=”@antonio_garzola”>
     <meta name=”twitter:creator” content=”@antonio_garzola”>
 
-        <title>Mi presentación</title>
+    <!--Invocando mi hoja de estilos-->    
+    <link rel="stylesheet" href="css/EstilosGeneral.css"/>
+    <title>Mi presentación</title>
 </head>
 
 <!-- Aquí comienza el body-->
