--- a/1Tareas-html/tarea1index.html
+++ b/1Tareas-html/tarea1index.html
@@ -5,7 +5,9 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+        <!--Invocando mi hoja de estilos-->        
+        <link rel="stylesheet" href="css/PrimeraHoja.css" />
         <title>Mi presentación</title>
 </head>
 
