--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         A continuación se muestran mis tareas
     </h1>
 
-<h2>
+
+<!--Módulo 1, HTML5-->
+    <h2>
 Tareas Html
 </h2>
 
@@ -45,6 +47,29 @@ Tareas Html
 </h3>
 <a href="1Tareas-html/tarea2/tarea2.html" download="" role="button">Descargar código</a>
 <a href="1Tareas-html/tarea2/tarea2.html">Ver código</a>
+
+<!--Módulo 2. Cascading style sheets (CSS)-->
+<h2>
+    Tareas CSS
+    </h2>
+    
+    <!-- Tarea 1 part.1-->
+    <h3>
+        Tarea - Personalizando el texto part. 1
+    </h3>
+    <a href="1Tareas-html/css/PrimeraHoja.css" download="" role="button">Descargar código</a>
+    <p>
+        Para ver los resultados de la hoja de estilos, favor de abrir la tarea 1 y tarea 4 del modulo de HTML5.
+    </p>
+    
+<!-- Tarea 1 part.2-->
+<h3>
+    Tarea - Personalizando el texto part. 2
+</h3>
+<a href="1Tareas-html/css/EstilosGeneral.css" download="" role="button">Descargar código</a>
+<p>
+    Para ver los resultados de la hoja de estilos, favor de abrir la tarea 2 y tarea 3 del modulo de HTML5.
+</p>
 
 </body>
 </html>
