Se corrigió loslos src, de los enlaces de la Tarea 4 de HTML5

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ Tareas Html
 <h3>
     Tarea4 - Practicando lo aprendido:
 </h3>
-<a href="1Tareas-html/tarea2/tarea2.html" download="" role="button">Descargar código</a>
-<a href="1Tareas-html/tarea2/tarea2.html">Ver código</a>
+<a href="1Tareas-html/tarea2.html" download="" role="button">Descargar código</a>
+<a href="1Tareas-html/tarea2.html">Ver código</a>
 
 <!--Módulo 2. Cascading style sheets (CSS)-->
 <h2>
