Se agregaron nuevas propiedades y valores a EstilosGeneral.css, así como se agrego como hoja de estilos al index y a la Tarea 4 del módulo de HTML5, así como se agrego otro apartado en el index para descargar la hoja de estilos, así como ver los cambios

--- a/1Tareas-html/tarea2.html
+++ b/1Tareas-html/tarea2.html
@@ -8,7 +8,7 @@
         <meta name=”description” content=”Se muestra mi Tarea 2 del módulo 1 html” />
 
     <!--Invocando mi hoja de estilos-->        
-    <link rel="stylesheet" href="css/PrimeraHoja.css" />
+    <link rel="stylesheet" href="css/EstilosGeneral.css" />
         
         <title>Tarea 2</title>
 </head>
