--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name=”author” content=Antonio Arzola” />
     <meta name=”description” content=”Se muestra la página principal de mi cuenta de github” />
 
+    <!--Invocando mi hoja de estilos-->        
+    <link rel="stylesheet" href="1Tareas-html/css/EstilosGeneral.css" />
     <title>Mis Tareas</title>
 </head>
 <body>
@@ -69,6 +71,15 @@ Tareas Html
 <a href="1Tareas-html/css/EstilosGeneral.css" download="" role="button">Descargar código</a>
 <p>
     Para ver los resultados de la hoja de estilos, favor de abrir la tarea 2 y tarea 3 del modulo de HTML5.
+</p>
+
+<!-- Tarea 2-->
+<h3>
+    Tarea - Personalizando el texto part. 3
+</h3>
+<a href="1Tareas-html/css/EstilosGeneral.css" download="" role="button">Descargar código</a>
+<p>
+    Para ver los resultados de la hoja de estilos general, favor de abrir la tarea 4 del modulo de HTML5, así como revisar esta pagina principal.
 </p>
 
 </body>
